@@ -3,6 +3,7 @@ NEWS - OpenPrinting CUPS Filters v1.0.42 - 2013-11-29
 
 CHANGES IN V1.0.43
 
+	- cups-browsed: removed duplicate definition of ippSetVersion.
 	- foomatic-rip: Take PATH_MAX constant from limits.h if
 	  available instead defining it's own version conflicting with
 	  kfreebsd. Thanks to Peter Green for the patch (Debian bug
